[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SingleOrigin"
version = "2.5.3"
authors = [{name = "Stephen Funni", email = "sdf68@cornell.edu"}]
description = "Crystallographic analysis for STEM data"
readme = "README.md"
license = { file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GPL 3.0+",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"

dependencies = [
    "psutil",
    "joblib",
    "tqdm",
    "PyQt5",
    "numpy >= 1.24.1",
    "pandas",
    "scipy >= 1.9.0",
    "matplotlib",
    "matplotlib_scalebar",
    "imageio",
    "scikit-image",
    "scikit-learn",
    "PyCifRW",
    "ncempy",
    "hyperspy >= 1.7.5",
]

[project.urls]
homepage = "https://github.com/sdfunni/SingleOrigin"
