[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SingleOrigin"
version = "3.0.0"
authors = [{name = "Stephen Funni", email = "sdf68@cornell.edu"}]
description = "Crystallographic analysis for STEM data"
readme = "README.md"
license = { file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"

dependencies = [
    "psutil",
    "joblib",
    "tqdm",
    "PyQt5",
    "numpy >= 1.24.1",
    "pandas",
    "scipy >= 1.9.0",
    "matplotlib",
    "matplotlib_scalebar",
    "imageio",
    "scikit-image",
    "scikit-learn",
    "tifffile",
    "ase",
    "ncempy",
    "hyperspy >= 1.7.5",
    "exspy",
    "h5py",
    "cmocean",
    "sphinx_rtd_theme",
]

[tool.setuptools]
# ...
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["Examples"]
include = ["SingleOrigin"]

[tool.setuptools.package-data]
SingleOrigin = ["*.txt", "*.py"]

[project.urls]
homepage = "https://github.com/sdfunni/SingleOrigin"
