[metadata]
name = SingleOrigin
version = 2.1.1
author = Stephen Funni
author_email = sfunni@andrew.cmu.edu
description = Atomic lattice image analysis
long_description = file: README.md
long_description_content_type = text
url = https://github.com/sdfunni/SingleOrigin
classifiers =
    Programming Language :: Python :: 3
    License :: GPL 3.0+
    Operating System :: OS Independent
    
[options]
package_dir =
    = SingleOrigin
packages = find:
python_requires = >=3.6
install_requires = 
    numpy
    pandas
    matplotlib
    scipy
    imageio
    ncempy
    scikit-image
    opencv-python
    matplotlib_scalebar
    psutil
    joblib
    tqdm
    PyCifRW
[options.packages.find]
where = src