[metadata]
name = SingleOrigin
version = 2.5.1
author = Stephen Funni
author_email = sfunni@andrew.cmu.edu
description = Atomic lattice image analysis
long_description = file: README.md
long_description_content_type = text
url = https://github.com/sdfunni/SingleOrigin
classifiers =
    Programming Language :: Python :: 3
    License :: GPL 3.0+
    Operating System :: OS Independent
    
[options]
# package_dir = ''
packages = find:
python_requires = >=3.6
install_requires = 
    numpy >= 1.24.1
    pandas
    matplotlib
    scipy >= 1.9.0
    imageio
    ncempy
    scikit-image
    matplotlib_scalebar
    psutil
    joblib
    tqdm
    PyCifRW
[options.packages.find]
# where = ''